[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surround_text_jumble_4VxP"
version = "0.0.1"
authors = [
  { name="4VxP", email="author@example.com" },
]
description = "A small package that can surround text with jumbled symbols to create a glitchy effect"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/python-jpg/python_text_jumbler"
"Bug Tracker" = "https://github.com/python-jpg/python_text_jumbler/issues"